--- a/index.html
+++ b/index.html
@@ -253,7 +253,8 @@ Irbid, Jordan<br>
 <i class="bi bi-envelope-open-fill"></i> Email:hmzah545@gmail.com<br>
 <i class="bi bi-github"></i>
 GitHub : https://github.com/Hamza-Shakhatreh/Hamza-Shakhatreh.git<br>
-<i class="bi bi-linkedin"></i> LinkedIn : https://www.linkedin.com/in/hamza-shakhatreh-bb6812164
+<i class="bi bi-linkedin"></i> LinkedIn : https://www.linkedin.com/in/hamza-shakhatreh-bb6812164<br>
+<i class="bi bi-box-arrow-in-down"></i> <a href="res/hamza shakhatreh resume.pdf" download> Download cv</a>
     
     </div>
   
@@ -268,6 +269,7 @@ GitHub : https://github.com/Hamza-Shakhatreh/Hamza-Shakhatreh.git<br>
   Back To TOP
 </button>
 </a>
+
 
 </div>
       </div>
